# dji_wpml_builder

./: .gitignore  README.md  pyproject.toml
examples/: basic_waypoint_mission.py  server.py
src/dji_wpml/: __init__.py  core.py  enums.py
src/dji_wpml/api/: aws_client.py  fh_client.py
src/dji_wpml/enums/: device_enums.py  general_enums.py
src/dji_wpml/models/: actions.py  coordinate_parameter_info.py  mission.py  mission_config.py  mission_information.py  orientation_parameter_of_drone_in_mapping.py  overlap_rate_information.py  payload.py  payload_param.py  template_information.py  waylines_information.py  waypoint_info.py  waypoints.py
src/dji_wpml/templates/: template_kml.xml  waylines_wpml.xml
src/dji_wpml/utils/: fh_uploader.py  geo.py  utils.py  xml_builder.py
tests/: test_validators.py
